# qflex

./: .clang-format  .gitignore  .gitmodules  .style.yapf  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  MANIFEST.in  Makefile  Makefile.in  Notes.txt  README.md  README.txt  TODO.txt  a.out  check_format.sh  cirq_amplitudes_sim.py  compile  compile_no_mkl  compile_on_summit  compile_with_talsh  configure  configure.ac  contraction.cpp  contraction_11x11x24.cpp  contraction_11x11x24.h  contraction_51q.cpp  contraction_51q.h  contraction_7x7x40.cpp  contraction_7x7x40.h  contraction_bris_60.cpp  contraction_bris_60.h  contraction_debug.cpp  contraction_sycamore_51x10.cpp  contraction_sycamore_51x10.h  contraction_sycamore_51x16.cpp  contraction_sycamore_51x16.h  contraction_sycamore_53x10_cphase.cpp  contraction_sycamore_53x12_cphase.cpp  (+48 more)
circuits/: adapt_SQC_to_ben.py  adapt_ben_to_SQC.py  ben_10_24_0.txt  ben_10_32_0.txt  ben_11_16_0.txt  ben_11_40_0.txt  ben_9_32_0.txt  ben_local_11_48_0.txt  bristlecone_48_1-24-1_0.txt  bristlecone_60_1-40-1_0.txt  circuit0q51d10.qflex  circuit0q51d10.shallowqc  circuit0q51d12.shallowqc  circuit0q51d14.shallowqc  circuit0q51d8.shallowqc  circuit_q4c0d4.iswap2cphase_everywhere.qflex  circuit_q4c0d4.qflex  circuit_q4c0d4_cz.qflex  circuit_q4c0d4_cz_cphase.qflex  circuit_q51c0d10.elided.qsim  circuit_q51c0d10.iswap2cphase_everywhere.qflex  circuit_q51c0d10.iswap2cphase_everywhere.qsim  circuit_q51c0d10.qflex  circuit_q51c0d10.qsim  circuit_q51c0d12.elided.qsim  circuit_q51c0d12.iswap2cphase_everywhere.qflex  circuit_q51c0d12.iswap2cphase_everywhere.qsim  circuit_q51c0d12.qflex  circuit_q51c0d12.qsim  circuit_q51c0d14.elided.qsim  circuit_q51c0d14.iswap2cphase_everywhere.qflex  circuit_q51c0d14.iswap2cphase_everywhere.qsim  circuit_q51c0d14.qflex  circuit_q51c0d14.qsim  circuit_q51c0d16.elided.qsim  circuit_q51c0d16.init_term_iswap2cphase_everywhere.qsim  circuit_q51c0d16.iswap2cphase_everywhere.qflex  circuit_q51c0d16.iswap2cphase_everywhere.qsim  circuit_q51c0d16.iswap2cphase_everywhere.shallowqc  circuit_q51c0d16.qflex  (+91 more)
circuits/generator/: generator_test.py
cirqinterface/: qflex_cirq_example.py  qflex_grids.py  qflex_simulator.py  qflex_virtual_device.py  transform_to_cirq_circuit.py
config/circuits/: bristlecone_48_1-16-1_0.txt  bristlecone_48_1-20-1_0.txt  bristlecone_48_1-24-1_0.txt  bristlecone_48_1-32-1_0.txt  bristlecone_48_1-40-1_0.txt  bristlecone_60_1-24-1_0.txt  bristlecone_60_1-32-1_0.txt  bristlecone_60_1-40-1_0.txt  bristlecone_70_1-12-1_0.txt  bristlecone_70_1-20-1_0.txt  bristlecone_70_1-24-1_0.txt  bristlecone_70_1-32-1_0.txt  bristlecone_70_1-40-1_0.txt  rectangular_11x12_1-24-1_0.txt  rectangular_11x12_1-40-1_0.txt  rectangular_2x2.txt  rectangular_2x2_1-2-1_0.txt  rectangular_4x4_1-16-1_0.txt  rectangular_6x6_1-32-1_0.txt  rectangular_7x7_1-40-1_0.txt  rectangular_7x7_1-48-1_0.txt  rectangular_8x8_1-24-1_0.txt  rectangular_8x8_1-32-1_0.txt  rochester_53_10_0_pABC.txt  rochester_53_12_0_pABC.txt  rochester_53_16_0_pABC.txt  rochester_53_20_0_pABC.txt  rochester_53_4_0_pABC.txt  rochester_53_8_0_pABC.txt  sycamore_53_10_0.txt  sycamore_53_12_0.txt  sycamore_53_14_0.txt  sycamore_53_16_0.txt  sycamore_53_5_0.txt  sycamore_53_6_0.txt  test.txt
config/grid/: bristlecone_60.txt  ibm_rochester.txt  rectangular_2x2.txt  rectangular_4x4.txt  rectangular_6x6.txt  rectangular_7x7.txt  rectangular_8x8.txt  rectangular_8x9.txt  rigetti_aspen.txt  rochester_53.txt  sycamore_53.txt  test.txt
config/ordering/: bristlecone_70.txt  rectangular_2x2.txt  rochester_53.txt  sycamore_53.txt
config/patterns/: ibm_rochester.txt  rigetti_aspen.txt  test.txt
docs/: cirq_interface.md  docker.md  index.md  input_formats.md  input_guide.md  install.md  rootless-container.md  rootless_container.md  rqc_generator.md
generate_input/: input_generator.py
grid/: bristlecone_48.txt  rectangular_11x12.txt
inputs/: input.txt  input_11x11x16.txt  input_11x11x24.txt  input_3.txt  input_7x7x24.txt  input_7x7x32.txt  input_7x7x40.txt  input_bris_60.txt  input_debug.txt  input_debug_cphase.txt  input_sycamore_51x10.txt  input_sycamore_53x12_cphase.txt  input_sycamore_53x14_cphase.txt  input_test_2q.txt
notes/: Notes.txt  Questions.txt  Setup.txt  Tests.txt
numerics/: qFlex_4x4-grid.ipynb  qFlex_IBM_Rochester.ipynb
ordering/: bristlecone_48.txt  bristlecone_70.txt  rectangular_2x2.txt  test.txt
patterns/: test.txt
python/: Dockerfile  cirq_if_example.py  example.ipynb  example.py  order_circuit_simulation.py  order_circuit_simulation_test.py  qflex_cirq_example.py  utils.py
python/circuits/: generator.py  generator_test.py  simulator.py  simulator_test.py
python/cirq_interface/: README.md  cirq_amplitudes_sim.py  data_storage_interface.py  example.ipynb  fsim_gate.py  qflex_circuit.py  qflex_grid.py  qflex_grids.py  qflex_order.py  qflex_simulator.py  qflex_virtual_device.py
python/cirqinterface/: cirq_amplitudes_sim.py  qflex_virtual_device.py
python/interface/: qflex_circuit.py  qflex_grid.py  qflex_order.py  qflex_simulator.py  qflex_virtual_device.py
python/ordering/: order_circuit_simulation.py  order_circuit_simulation_test.py
qflexcirq/: __init__.py  qflex_cirq_example.py  utils.py
rootless-container/: create_container.sh  create_contaner.sh  run_container.sh
scripts/: check_format.sh  clean-git.sh  clean_git.sh  construct_cirq_environment.sh  create-rootless-container.sh  create_cirq_environment.sh  requirements.txt  run-rootless-container.sh
src/: Dockerfile  Makefile  Makefile.in  circuit.cpp  circuit.h  contraction_utils.cpp  contraction_utils.h  errors.h  evaluate_circuit.cpp  evaluate_circuit.h  global.h  grid.cpp  grid.h  input.h  main.cpp  memory.h  ordering.cpp  ordering.h  pybind_main.cpp  pybind_main.h  pycpp_main.cpp  pycpp_main.h  read_circuit.cpp  read_circuit.h  stopwatch.cpp  stopwatch.h  tensor.cpp  tensor.h  utils.cpp  utils.h
tests/: Dockerfile  Makefile  Makefile.in  contraction_utils_test.cpp  evaluate_circuit_test.cpp  mkl_tensor_test.cpp  read_circuit_test.cpp  tensor_test.cpp
(+32 files in other folders)
